ms-manifests/frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visionaid-frontend
  labels:
    app: visionaid-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visionaid-frontend
  template:
    metadata:
      labels:
        app: visionaid-frontend
    spec:
      containers:
      - name: visionaid-frontend
        image: registry.forge.hefr.ch/pi_aimarket-visionaid/frontend/visionaid-frontend:1683203834 # {"$imagepolicy": "visionaid-flux-system:frontend"}
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: visionaid-regsecret
