ms-manifests/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: visionaid-frontend
  namespace: visionaid-flux-system
  annotations:
    prometheus.io/scrape: "true"
spec:
  selector:
    app: visionaid-frontend
  ports:
  - protocol: TCP
    port: 80
